# metastruct

./: CMakeLists.txt  LICENSE.md  README.md
include/: metastruct.h
src/: main.c  metastruct.c
